[gd_scene load_steps=8 format=2]

[ext_resource path="res://Platformer12-HUD-coin-font/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Actulgamestufff/options.gd" type="Script" id=2]
[ext_resource path="res://soundsandmusic (1)/music/Suonatore di Liuto.mp3" type="AudioStream" id=3]
[ext_resource path="res://platformer-p15-assets/more fonts/KiriFont.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.65839
margin_top = 16.9977
margin_right = -6.65845
margin_bottom = 16.9977
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music1" type="Label" parent="."]
margin_left = 63.6646
margin_top = 37.6308
margin_right = 170.665
margin_bottom = 57.6308
custom_fonts/font = SubResource( 1 )
text = "Music Volume "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music 2" type="Label" parent="."]
margin_left = 280.667
margin_top = 43.3371
margin_right = 296.667
margin_bottom = 57.3371
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_db" type="HSlider" parent="."]
margin_left = 172.663
margin_top = 42.0023
margin_right = 272.663
margin_bottom = 58.0023
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX1" type="Label" parent="."]
margin_left = 63.6646
margin_top = 101.631
margin_right = 237.665
margin_bottom = 121.631
custom_fonts/font = SubResource( 2 )
text = "Sounds Effects Volume "

[node name="SFX2" type="Label" parent="."]
margin_left = 349.77
margin_top = 106.731
margin_right = 365.77
margin_bottom = 120.731
text = "50"

[node name="SFX_db" type="HSlider" parent="."]
margin_left = 244.319
margin_top = 105.626
margin_right = 344.319
margin_bottom = 121.626
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Optionsmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Back" type="Button" parent="."]
margin_left = 581.141
margin_top = 459.98
margin_right = 702.141
margin_bottom = 482.98
custom_fonts/font = SubResource( 3 )
text = "Main menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Music_db" to="." method="_on_Music_db_value_changed"]
[connection signal="value_changed" from="SFX_db" to="." method="_on_SFX_db_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
